--- a/views/app/issue.jade
+++ b/views/app/issue.jade
@@ -75,7 +75,7 @@ h1 DOWNTIME REPORT
  script.
   var goSaveData = function() {
    
-  alert ("go save");
+  alert ("Saving Data & Then Delivery data in couple minute");
   
   }
   var goNext= function(ele, nextinput) {
