--- a/views/main.jade
+++ b/views/main.jade
@@ -52,7 +52,7 @@ html(lang='en')
             h1 VIETNAM MONITORING SYSTEM
           .row-fluid
             .span4
-              h2 SHOW ALL OUTPUT
+              h2 ASSEMBLY OUTPUT
               p
                 | Xem dữ liệu output hàng giờ
               p
@@ -88,11 +88,12 @@ html(lang='en')
                 h2 SMT Downtime
                 p
                  | SMT Downtime
-                 :markdown
-                  This is some **text** with a [FuseSource](smtdowntime) link. 
-                  
                 p
                 a.btn(href='smtdowntime') View details »
+                ul#subjects
+                  li
+                    a(href="smt/targetmonitoring") SMT Target Monitoring
+                    | : Show target vs actual for 4 week data
         
       hr
       footer
