--- a/views/main.jade
+++ b/views/main.jade
@@ -2,11 +2,12 @@
 html(lang='en')
   head
     meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
     title DATALOGIC VIETNAM-PMS
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='description', content='')
     meta(name='author', content='')
-    link(href='/css/bootstrap.css', rel='stylesheet')
+    link(href='/css/bootstrap.min.css', rel='stylesheet')
     style(type='text/css')
       body {
       padding-top: 60px;
@@ -16,40 +17,62 @@ html(lang='en')
       padding: 9px 0;
       }
     link(href='/css/bootstrap-responsive.css', rel='stylesheet')
+    //link(href='/css/jumbotron.css', rel='stylesheet')
     link(rel='apple-touch-icon-precomposed', sizes='144x144', href='/ico/apple-touch-icon-144-precomposed.png')
     link(rel='apple-touch-icon-precomposed', sizes='114x114', href='/ico/apple-touch-icon-114-precomposed.png')
     link(rel='apple-touch-icon-precomposed', sizes='72x72', href='/ico/apple-touch-icon-72-precomposed.png')
     link(rel='apple-touch-icon-precomposed', href='/ico/apple-touch-icon-57-precomposed.png')
     link(rel='shortcut icon', href='/ico/favicon.png')
     
-  body
+     //
+       [ FONT-AWESOME ICON ]
+       =========================================================================================================================
+    //link(rel='stylesheet', type='text/css', href='library/font-awesome-4.3.0/css/font-awesome.min.css')
+    //-  //
+    //-    [ PLUGIN STYLESHEET ]
+    //-    =========================================================================================================================
+    //- link(rel='shortcut icon', type='image/x-icon', href='images/icon.png')
+    //- link(rel='stylesheet', type='text/css', href='css1/animate.css')
+    //- link(rel='stylesheet', type='text/css', href='css1/magnific-popup.css')
+    //- link(rel='stylesheet', type='text/css', href='library/vegas/vegas.min.css')
+    //-  //
+    //-    [ Boot STYLESHEET ]
+    //-    =========================================================================================================================
+    //- link(rel='stylesheet', type='text/css', href='library/bootstrap/css/bootstrap-theme.min.css')
+    //- link(rel='stylesheet', type='text/css', href='library/bootstrap/css/bootstrap.css')
+    //-  //
+    //-    [ DEFAULT STYLESHEET ]
+    //-    =========================================================================================================================
+    //- link(rel='stylesheet', type='text/css', href='css1/style.css')
+    //- link(rel='stylesheet', type='text/css', href='css1/responsive.css')
+    //- link(rel='stylesheet', type='text/css', href='css1/color/green.css') 
     
-//top menu
-.navbar.navbar-inverse.navbar-fixed-top
+  body
+   .navbar.navbar-inverse.navbar-fixed-top
       .navbar-inner
         .container-fluid
           a.btn.btn-navbar(data-toggle='collapse', data-target='.nav-collapse')
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.brand(href='') HOME PAGE
+          a.brand(href='') VIETNAM SYSTEM
           .nav-collapse.collapse
             //p.navbar-text.pull-right
             //  | Logged in as
             //  a.navbar-link(href='#') Username
             ul.nav
               li.active
-                a(href='/') HOME
+                a(href='/') GO HOME
               li
-                a(href='show') SHOW
+                a(href='show') MONITORING
               li
-                a(href='lineshow') LINE
+                a(href='lineshow') REPORT
 
 .container-fluid
       
         .span12
           .hero-unit
-            h1 VIETNAM MONITORING SYSTEM
+            h1 MONITORING SYSTEM
           .row-fluid
             .span4
               h2 ASSEMBLY OUTPUT
@@ -103,9 +126,21 @@ html(lang='en')
                   li
                     a(href="smtmonitor") SMT Target Monitoring
                     | : Show target vs actual for 4 week data
+           .row-fluid
+               .span4
+                h2 POST ASSY
+                p
+                  ul#subjects
+                  li
+                    a(href="pamonitor") PostAssy Tracking
+                    | : Report Daily Output and Detail Tracing Serial
          .span12
            .hero-unit
-             h1 VIETNAM MAINTENANCE AND REPAIR
+             h1 ENGINEERING 
+           .span4
+               h2 DOCUMENT
+               :markdown
+                - [QuickDocument](/pdfview)
            .span4
                h2 PCBA REPAIR
                ul#subjects
@@ -116,8 +151,7 @@ html(lang='en')
                  |Password default: 123
                  li
                   a(href="#", target="_blank") Nhập Data Web
-                  |: Nhập liệu trên WebApp
-               p
+                  |: Nhập liệu trên WebApp    
           .span12
             .hero-unit
               h1 WAREHOUSE PROCESS
