--- a/views/main.jade
+++ b/views/main.jade
@@ -7,7 +7,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='description', content='')
     meta(name='author', content='')
-    link(href='/css/bootstrap.min.css', rel='stylesheet')
+    link(href='/css/bootstrap.css', rel='stylesheet')
     style(type='text/css')
       body {
       padding-top: 60px;
@@ -67,6 +67,7 @@ html(lang='en')
                 a(href='show') MONITORING
               li
                 a(href='lineshow') REPORT
+              
 
 .container-fluid
       
@@ -160,7 +161,6 @@ html(lang='en')
                 :markdown
                  - [PickPartVerify](http://vnmacsrpt2/vnapp/Warehouse/PickPartVerify.aspx) Kiểm tra pick hàng theo Transfer Order
                  
-                
         
       hr
       footer
