--- a/views/main.jade
+++ b/views/main.jade
@@ -151,7 +151,7 @@ html(lang='en')
                  br
                  |Password default: 123
                  li
-                  a(href="#", target="_blank") Nhập Data Web
+                  a(href="repair", target="_blank") Nhập Data Web
                   |: Nhập liệu trên WebApp    
           .span12
             .hero-unit
