--- a/views/main.jade
+++ b/views/main.jade
@@ -152,7 +152,7 @@ html(lang='en')
                  |Password default: 123
                  li
                   a(href="repair", target="_blank") Nhập Data Web
-                  |: Nhập liệu trên WebApp    
+                  |: Nhập liệu trên WebApp update Sep 06    
           .span12
             .hero-unit
               h1 WAREHOUSE PROCESS
