smt output hourly- vu develop w35

--- a/views/main.jade
+++ b/views/main.jade
@@ -118,11 +118,11 @@ html(lang='en')
                p
                a.btn(href='changeover') View details »
               .span4
-                h2 SMT Downtime
+                h2 SMT Monitoring
                 p
-                 | SMT Downtime
+                 | SMT Output
                 p
-                a.btn(href='smtdowntime') View details »
+                a.btn(href='smtoutput') View details »
                 ul#subjects
                   li
                     a(href="smtmonitor") SMT Target Monitoring
@@ -154,7 +154,7 @@ html(lang='en')
                   a(href="repair", target="_blank") Nhập Data Web
                   |: Nhập liệu trên WebApp   
           .span12
-            .hero-unit
+            .hero-unitbit
               h1 WAREHOUSE PROCESS
             .span4
                 h2 PICK AND PACK 
